fix: z-index issue

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -16,7 +16,10 @@
 
   --sl-color-bg-sidebar: transparent;
   --sl-color-hairline-shade: #323846;
+
+  --sl-z-index-navbar: 6000;
 }
+
 /* Light mode colors. */
 :root[data-theme="light"] {
   --sl-color-accent-low: #c7d7fb;
